fixed res of other buy pages

--- a/buyOne.html
+++ b/buyOne.html
@@ -47,7 +47,11 @@
                 </span>
                 <br>
                 <br>
-                <span id="price" class="b1-l5">
+                <span id="price" class="b1d-l5">
+                    ₹999.00
+                </span>
+
+                <span id="price" class="b1m-l5">
                     ₹999.00
                 </span>
                 <!-- <strike> -->
