--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
     </div>
 
-    <div class="home6">
+    <div class="home6m">
         <div class="h6-col1">
             <img src="./images/img13.png">
         </div>
@@ -238,7 +238,7 @@
         </div>
     </div>
 
-    <div class="home6">
+    <div class="home6m">
         <div class="h6-col1">
             <img src="./images/img15.png">
         </div>
