--- a/buy.html
+++ b/buy.html
@@ -28,7 +28,7 @@
             </div>
             <br>
             <br>
-            <img class="img21" src="./images/img21.png">
+            <img id="bstick" class="img21" src="./images/img21.png">
 
 
         </div>
@@ -384,6 +384,7 @@
 
         function myFunction1() {
             document.getElementById("prodt").src = "./images/img26.png";
+            document.getElementById("bstick").src = "./images/img21.png";
             document.getElementById("price").innerHTML = "₹999.00";
             document.getElementById("priceStrike").innerHTML = " ";
             document.getElementById("prd-count").innerHTML = "Includes 2 Free Hash Stickers";
@@ -393,6 +394,7 @@
         }
         function myFunction2() {
             document.getElementById("prodt").src = "./images/img27.png";
+            document.getElementById("bstick").src = "./images/img30.png";
             document.getElementById("price").innerHTML = "₹1799.00";
             document.getElementById("priceStrike").innerHTML = "(₹1999.00)";
             document.getElementById("prd-count").innerHTML = "Includes 4 Free Hash Stickers";
@@ -403,6 +405,7 @@
         }
         function myFunction3() {
             document.getElementById("prodt").src = "./images/img28.png";
+            document.getElementById("bstick").src = "./images/img31.png";
             document.getElementById("price").innerHTML = "₹3799.00";
             document.getElementById("priceStrike").innerHTML = "(₹3999.00)";
             document.getElementById("prd-count").innerHTML = "Includes 8 Free Hash Stickers";
