--- a/index.html
+++ b/index.html
@@ -8,14 +8,22 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <title>Hash Tag</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KJN25P2JW3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'G-KJN25P2JW3');
+    </script>
 </head>
 
 <body>
 
     <div class="navbar">
         <a href="#index" class="hash">HashTag</a>
-        <a href="./buy.html">
+        <a href="./buyOne.html">
             <button class="buy-btn">Pre-Order</button>
         </a>
     </div>
@@ -53,7 +61,7 @@
                     Book your HashTag for FREE
                 </p>
                 <center>
-                    <a href="./buy.html">
+                    <a href="./buyOne.html">
                         <button class="btn2">Pre-Order</button>
                     </a>
                 </center>
@@ -75,7 +83,7 @@
             <br>
             <br>
             <!-- <br> -->
-            <a href="./buy.html">
+            <a href="./buyOne.html">
                 <button class="btn21">Pre-Order</button>
             </a>
             <br>
@@ -287,7 +295,7 @@
                 Book your HashTag now!
 
             </span>
-            <a href="./buy.html">
+            <a href="./buyOne.html">
                 <button class="btn3">Pre-Order</button>
             </a>
         </center>
