--- a/buyTwo.html
+++ b/buyTwo.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" type="text/css" href="buyOne.css" />
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <title>HashTag</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KJN25P2JW3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-KJN25P2JW3');
+    </script>
 </head>
 
 <body>
@@ -48,7 +57,7 @@
                 <br>
                 <br>
                 <span id="price" class="b1-l5">
-                    ₹1799.00
+                    ₹1798.00
                 </span>
                 <!-- <strike> -->
                 <span id="priceStrike" class="strike-pr">
@@ -92,7 +101,11 @@
             </div>
 
             <!-- <div class="pk-btn"> -->
-            <button class="btn5-act">Continue</button>
+            <!-- <button class="btn5-act">Continue</button> -->
+
+            <div id='product-component-1653049276602'></div>
+
+
             <!-- </div> -->
             <div class="p-des-li">
                 <div class="p-li">
@@ -309,7 +322,185 @@
 
 
 
+    <script type="text/javascript">
 
+        (function () {
+            var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+            if (window.ShopifyBuy) {
+                if (window.ShopifyBuy.UI) {
+                    ShopifyBuyInit();
+                } else {
+                    loadScript();
+                }
+            } else {
+                loadScript();
+            }
+            function loadScript() {
+                var script = document.createElement('script');
+                script.async = true;
+                script.src = scriptURL;
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+                script.onload = ShopifyBuyInit;
+            }
+            function ShopifyBuyInit() {
+                var client = ShopifyBuy.buildClient({
+                    domain: 'hashtagapp.myshopify.com',
+                    storefrontAccessToken: '71bc3b27c9f2709c3aad5b3750e6ad5c',
+                });
+                ShopifyBuy.UI.onReady(client).then(function (ui) {
+                    ui.createComponent('product', {
+                        id: '7791749333222',
+                        node: document.getElementById('product-component-1653049276602'),
+                        moneyFormat: 'Rs.%20%7B%7Bamount%7D%7D',
+                        options: {
+                            "product": {
+                                "styles": {
+                                    "product": {
+                                        "@media (min-width: 601px)": {
+                                            "max-width": "calc(25% - 20px)",
+                                            "margin-left": "20px",
+                                            "margin-bottom": "50px"
+                                        }
+                                    },
+                                    "button": {
+                                        "font-family": "Roboto, sans-serif",
+                                        "font-size": "14px",
+                                        "padding-top": "15px",
+                                        "padding-bottom": "15px",
+                                        ":hover": {
+                                            "background-color": "#d60808"
+                                        },
+                                        "background-color": "#ee0909",
+                                        ":focus": {
+                                            "background-color": "#d60808"
+                                        },
+                                        "border-radius": "40px"
+                                    },
+                                    "quantityInput": {
+                                        "font-size": "14px",
+                                        "padding-top": "15px",
+                                        "padding-bottom": "15px"
+                                    }
+                                },
+                                "contents": {
+                                    "img": false,
+                                    "title": false,
+                                    "price": false
+                                },
+                                "text": {
+                                    "button": "Add to cart"
+                                },
+                                "googleFonts": [
+                                    "Roboto"
+                                ]
+                            },
+                            "productSet": {
+                                "styles": {
+                                    "products": {
+                                        "@media (min-width: 601px)": {
+                                            "margin-left": "-20px"
+                                        }
+                                    }
+                                }
+                            },
+                            "modalProduct": {
+                                "contents": {
+                                    "img": false,
+                                    "imgWithCarousel": true,
+                                    "button": false,
+                                    "buttonWithQuantity": true
+                                },
+                                "styles": {
+                                    "product": {
+                                        "@media (min-width: 601px)": {
+                                            "max-width": "100%",
+                                            "margin-left": "0px",
+                                            "margin-bottom": "0px"
+                                        }
+                                    },
+                                    "button": {
+                                        "font-family": "Roboto, sans-serif",
+                                        "font-size": "14px",
+                                        "padding-top": "15px",
+                                        "padding-bottom": "15px",
+                                        ":hover": {
+                                            "background-color": "#d60808"
+                                        },
+                                        "background-color": "#ee0909",
+                                        ":focus": {
+                                            "background-color": "#d60808"
+                                        },
+                                        "border-radius": "40px"
+                                    },
+                                    "quantityInput": {
+                                        "font-size": "14px",
+                                        "padding-top": "15px",
+                                        "padding-bottom": "15px"
+                                    }
+                                },
+                                "googleFonts": [
+                                    "Roboto"
+                                ],
+                                "text": {
+                                    "button": "Add to cart"
+                                }
+                            },
+                            "option": {},
+                            "cart": {
+                                "styles": {
+                                    "button": {
+                                        "font-family": "Roboto, sans-serif",
+                                        "font-size": "14px",
+                                        "padding-top": "15px",
+                                        "padding-bottom": "15px",
+                                        ":hover": {
+                                            "background-color": "#d60808"
+                                        },
+                                        "background-color": "#ee0909",
+                                        ":focus": {
+                                            "background-color": "#d60808"
+                                        },
+                                        "border-radius": "40px"
+                                    }
+                                },
+                                "text": {
+                                    "title": "HashTag Cart",
+                                    "total": "Subtotal",
+                                    "empty": "You have no HashTags in your cart.",
+                                    "notice": "Pre-order your HashTag now for FREE",
+                                    "button": "Checkout"
+                                },
+                                "googleFonts": [
+                                    "Roboto"
+                                ]
+                            },
+                            "toggle": {
+                                "styles": {
+                                    "toggle": {
+                                        "font-family": "Roboto, sans-serif",
+                                        "background-color": "#ee0909",
+                                        ":hover": {
+                                            "background-color": "#d60808"
+                                        },
+                                        ":focus": {
+                                            "background-color": "#d60808"
+                                        }
+                                    },
+                                    "count": {
+                                        "font-size": "14px"
+                                    }
+                                },
+                                "googleFonts": [
+                                    "Roboto"
+                                ]
+                            }
+                        },
+                    });
+                });
+            }
+        })();
+
+    </script>
 
 
 
