updated entire page

--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="main.css" />
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-    <title>Hash Tag</title>
+    <title>HashTag</title>
+    <link rel="icon" type="image/x-icon" href="./images/hlogo.png">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KJN25P2JW3"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HY1G09K9GM"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-KJN25P2JW3');
+        gtag('config', 'G-HY1G09K9GM');
     </script>
 </head>
 
 <body>
 
     <div class="navbar">
-        <a href="#index" class="hash">HashTag</a>
+        <a href="#index" class="hash"><img class="nlogo" src="./images/nlogo.png"> </a>
         <a href="./buyOne.html">
             <button class="buy-btn">Pre-Order</button>
         </a>
@@ -54,8 +55,8 @@
         <div class="col2-hm2">
             <div class="right-hm2">
                 <p class="line5">
-                    HashTag is a super esay way to keep track of your stuff. Tag one on your keys. Put another in your
-                    backpack. Stick another on your tv remote. And just like that they are in the HashTag app.
+                    Hashtag is a simple way to keep track of your stuff. Tag one on your keys. Put one in your backpack.
+                    Stick another on your TV remote. And there they are in the HashTag app.
                 </p>
                 <p class="line6">
                     Book your HashTag for FREE
@@ -119,10 +120,9 @@
                 Find your things
             </p>
             <p class="h4-line2">
-                Misplacing something like your wallet doesn’t have to be a big deal when it has HashTag attached.
-                Just
-                tap “Play Sound” in the Hash app and the HashTag on your keys will ring. Follow the direction after
-                tapping “Find” and you reach next to the HashTag.
+                Misplacing something like your wallet doesn’t have to be a big deal when it has a HashTag attached.
+                Just tap “Play Sound” in the Hash app and the HashTag on your keys will ring. Tap on "Find" and follow
+                the directions until you are right next to the HashTag.
             </p>
 
 
@@ -171,9 +171,8 @@
                 Find your Phone
             </p>
             <p class="h4-line2">
-                Lost your phone? Use HashTag, like the ones on your keys or wallet, to make your phone ring. Just
-                double
-                press the HashTag logo button. It works even if your phone is on silent.
+                Lost your phone? Make your phone ring by using HashTag, like the ones on your keys or wallet. Press the
+                HashTag button twice. It works even if your phone is on silent.
             </p>
         </div>
     </div>
@@ -183,15 +182,15 @@
         <div class="h7-col1">
 
             <p class="h4-line1">
-                Smart Alerts
+                Hash Alerts
             </p>
             <p class="h4-line2">
-                These alerts make sure you don’t leave anything behind, no matter where you are or where you go. We’ll
-                check to make sure you leave that location with all of the Hashed items you first arrived with.
+                These alerts make sure you don’t leave anything behind, no matter where you are or where you move. We
+                will make sure that you leave that location with all of the HashTaged items you brought with you.
             </p>
         </div>
         <div class="h7-col2">
-            <img src="./images/img13.png">
+            <img src="./images/img13.svg">
         </div>
     </div>
 
@@ -202,11 +201,11 @@
         <div class="h6-col2">
 
             <p class="h4-line1">
-                Smart Alerts
+                Hash Alerts
             </p>
             <p class="h4-line2">
-                These alerts make sure you don’t leave anything behind, no matter where you are or where you go. We’ll
-                check to make sure you leave that location with all of the Hashed items you first arrived with.
+                These alerts make sure you don’t leave anything behind, no matter where you are or where you move. We
+                will make sure that you leave that location with all of the HashTaged items you brought with you.
             </p>
         </div>
     </div>
@@ -222,8 +221,8 @@
                 Location History
             </p>
             <p class="h4-line2">
-                If you lose something when you’re out and about, HashTag can help you locate it. View its most recent
-                location on a map. It’ll show you the last time it was with you and also you can see the last 30 days
+                If you lose something when you're out and about, HashTag can help you locate it. View its most recent
+                location on maps. It'll show you the last time it was with you and also you can see the last 30 days'
                 history.
             </p>
         </div>
@@ -236,9 +235,11 @@
                 Lost and Found
             </p>
             <p class="h4-line2">
-                If you lose your HashTag then enable ‘Lost Mode’ in Hash app and leave a number with message. When
-                someone finds it, they can get your contact info by tapping your HashTag with an NFC-capable smartphone.
-                And also when it’s detected by any Hash device in the network, you’ll automatically get a notification.
+                When you lose your HashTag, enable Lost Mode in the HashTag app and leave a message with a phone number.
+                When someone finds it, they can get your contact info by tapping your HashTag with an NFC-capable
+                smartphone.
+                In addition, whenever any HashTag app detects it, you'll receive an automatic notification of its
+                location!
             </p>
         </div>
         <div class="h7-col2">
@@ -256,9 +257,11 @@
                 Lost and Found
             </p>
             <p class="h4-line2">
-                If you lose your HashTag then enable ‘Lost Mode’ in Hash app and leave a number with message. When
-                someone finds it, they can get your contact info by tapping your HashTag with an NFC-capable smartphone.
-                And also when it’s detected by any Hash device in the network, you’ll automatically get a notification.
+                When you lose your HashTag, enable Lost Mode in the HashTag app and leave a message with a phone number.
+                When someone finds it, they can get your contact info by tapping your HashTag with an NFC-capable
+                smartphone.
+                In addition, whenever any HashTag app detects it, you'll receive an automatic notification of its
+                location!
             </p>
         </div>
     </div>
@@ -274,8 +277,8 @@
                 Scan and Secure
             </p>
             <p class="h4-line2">
-                This feature enables you to easily scan for and detect nearby HashTags that may be traveling with you.
-                HashTags is designed for locating lost or misplaced items, not for tracking people.
+                This feature enables you to quickly scan and detect any unknown HashTags that may be traveling with you.
+                HashTags is designed to locate lost or misplaced items, not to track people.
             </p>
         </div>
     </div>
@@ -303,19 +306,163 @@
 
 
     <div class="home11">
+
         <div class="h11-l1">
-            <span class="h11-txt1">
-                HashTag Tech Space
-            </span>
-            <img class="img20" src="./images/img20.png">
+            <button class="accordion">
+                <span class="h11-txt1">
+                    HashTag Tech Space
+                </span>
+                <!-- <img class="img20" src="./images/img20.png"> -->
+            </button>
+
+
+            <div class="panel">
+                <div class="acc-row">
+                    <div class="acc-head">
+                        Size and Weight
+                    </div>
+                    <div class="acc-body">
+                        <div class="acc-bcol1">
+                            <img class="img32" src="./images/img32.png">
+                        </div>
+                        <div class="acc-bcol2">
+                            <div class="acc-txt1">
+                                Size
+                            </div>
+                            <div class="acc-txt2">
+                                Diameter: 32.00mm (1.26 inches)<br>
+                                Height: 7.5mm (0.30)
+                            </div>
+                            <br>
+                            <br>
+                            <div class="acc-txt1">
+                                Weight
+                            </div>
+                            <div class="acc-txt2">
+                                13grams
+                            </div>
+                        </div>
+                    </div>
+
+                    <hr class="acc-hr">
+                    <br>
+
+                    <div class="acc-des">
+                        <div class="acc-des1">
+                            Splash, Water & Dust Resistance
+                        </div>
+                        <div class="acc-des2">
+                            Maximum depth of 1 meter up to 30min
+                        </div>
+                    </div>
+
+                    <br>
+                    <hr class="acc-hr">
+                    <br>
+
+                    <div class="acc-des">
+                        <div class="acc-des1">
+                            Speaker
+                        </div>
+                        <div class="acc-des2">
+                            Built-in speaker
+                        </div>
+                    </div>
+
+                    <br>
+                    <hr class="acc-hr">
+                    <br>
+
+                    <div class="acc-des">
+                        <div class="acc-des1">
+                            Connectivity
+                        </div>
+                        <div class="acc-des2">
+                            Bluetooth and Ultra Wideband for finding
+                            NFC tap for Lost Mode
+                        </div>
+                    </div>
+
+                    <br>
+                    <hr class="acc-hr">
+                    <br>
+
+                    <div class="acc-des">
+                        <div class="acc-des1">
+                            Splash, Water & Dust Resistance
+                        </div>
+                        <div class="acc-des2">
+                            Maximum depth of 1 meter up to 30min
+                        </div>
+                    </div>
+
+                    <br>
+                    <hr class="acc-hr">
+                    <br>
+
+                    <div class="acc-des">
+                        <div class="acc-des1">
+                            Battery
+                        </div>
+                        <div class="acc-des2">
+                            3-years life
+                            User-replaceable CR2032 coin cell battery
+                        </div>
+                    </div>
+
+                    <br>
+                    <hr class="acc-hr">
+                    <br>
+
+                    <div class="acc-des">
+                        <div class="acc-des1">
+                            Accessibility
+                        </div>
+                        <div class="acc-des2">
+                            HashTag app
+                        </div>
+                    </div>
+
+                    <br>
+                    <hr class="acc-hr">
+                    <br>
+
+                    <div class="acc-des">
+                        <div class="acc-des1">
+                            Environmental Requirements
+                        </div>
+                        <div class="acc-des2">
+                            Operating temperature: <br>
+                            −20° to 60° C (−4° to 140° F)
+                        </div>
+                    </div>
+
+                    <br>
+                    <hr class="acc-hr">
+
+
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
         </div>
 
-        <div class="h11-l2">
+
+        <!-- <div class="h11-l2">
             <span class="h11-txt1">
                 HashTag Tech Space
             </span>
             <img class="img20" src="./images/img20.png">
-        </div>
+        </div> -->
     </div>
 
 
@@ -333,12 +480,39 @@
     </div>
 
     <div class="home13">
-        <center>
+
+        <div class="ft-row">
+            <div class="ft-col1">
+                <span class="ft-line1">CONNECT WITH US</span>
+                <img class="imgb19" src="./images/img19.png">
+            </div>
+            <div class="ft-col2">
+                <span class="ft-line2">CONTACT US AT: contact@hashtag.org.in</span>
+                <!-- <img class="imgb18" src="./images/img18.png"> -->
+            </div>
+        </div>
+
+
+        <!-- <center>
             <span class="h13-line1">CONNECT WITH US</span>
             <img class="img19" src="./images/img19.png">
+        </center> -->
+
+
+
+        <center>
+            <div class="h13-linef">Launching in August 2022</div>
+            <br>
+            <span class="h13-linef2">Book your HashTag now to grab it first!</span>
+            <a href="./buyOne.html">
+                <button class="btn3">Pre-Order</button>
+            </a>
         </center>
 
-        <div class="foot">
+
+
+
+        <!-- <div class="foot">
 
             <div class="f-col1">
                 <div class="f-col-txt">
@@ -394,13 +568,14 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
         <br>
         <center>
             <span class="f-line-l">
                 Copyright © 2022 HashTag Electronics Pvt. Ltd. All rights reserved.
             </span>
         </center>
+        <br>
     </div>
 
 
@@ -420,7 +595,22 @@
 
 
 
+    <script>
+        var acc = document.getElementsByClassName("accordion");
+        var i;
 
+        for (i = 0; i < acc.length; i++) {
+            acc[i].addEventListener("click", function () {
+                this.classList.toggle("active");
+                var panel = this.nextElementSibling;
+                if (panel.style.maxHeight) {
+                    panel.style.maxHeight = null;
+                } else {
+                    panel.style.maxHeight = panel.scrollHeight + "px";
+                }
+            });
+        }
+    </script>
 
 </body>
 
