--- a/buyFour.html
+++ b/buyFour.html
@@ -7,22 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="buyOne.css" />
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-    <title>HashTag</title>
+    <title>HashTag pack-4</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KJN25P2JW3"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HY1G09K9GM"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-KJN25P2JW3');
+        gtag('config', 'G-HY1G09K9GM');
     </script>
 </head>
 
 <body>
 
     <div class="navbar">
-        <a href="./index.html" class="hash">HashTag</a>
+        <a href="./index.html" class="hash"><img class="nlogo" src="./images/nlogo.png"></a>
         <a href="./index.html">
             <button class="buy-btn">Back</button>
         </a>
@@ -44,7 +44,7 @@
         <div class="b1-col2">
             <div class="b1-col2-i">
                 <span class="b1-l1">
-                    FREE Hash Stickers
+                    BUNDLE & SAVE ₹200
                 </span>
                 <br>
                 <div class="b1-l2">
@@ -57,7 +57,7 @@
                 <br>
                 <br>
                 <span id="price" class="b1-l5">
-                    ₹3799.00
+                    ₹3796.00
                 </span>
                 <!-- <strike> -->
                 <span id="priceStrike" class="strike-pr">
@@ -104,11 +104,16 @@
             <!-- <div class="pk-btn"> -->
             <!-- <button class="btn5-act">Continue</button> -->
 
-            <div id='product-component-1653049382577'></div>
+            <div class="sfy-btn" id='product-component-1653049382577'></div>
 
 
             <!-- </div> -->
             <div class="p-des-li">
+                <div class="p-li2">
+                    HashTag is a tiny smart tracker that protects and locates your everyday belongings, such as your
+                    keys, phone, purse, backpack, etc. It has a wider range, louder ring, and longer-lasting battery.
+                </div>
+                <br>
                 <div class="p-li">
                     • Up to 459 ft / 140 m range
                 </div>
@@ -155,61 +160,125 @@
                 Common Questions.
             </div>
             <hr class="hr-line">
-            <div class="ques-row">
-                <span class="ques-txt">
-                    Do I need to do anything special to make sure my adhesive sticks?
-                </span>
-                <img class="imgb20" src="./images/img20.png">
+            <button class="accordion">
+                <div class="ques-row">
+
+                    <span class="ques-txt">
+                        What’s HashTag’s Bluetooth finding range?
+                    </span>
+                </div>
+
+            </button>
+            <div class="panel">
+                <p>Our HashTag has a range up to 459ft / 140m. However, as with all wireless technologies, different
+                    environments impact the effective range of Bluetooth signals. If your HashTag is out of
+                    Bluetooth range, you can check its last known location on the app. This information is
+                    automatically updated whenever anyone in the HashTag community comes within Bluetooth range of
+                    your HashTag. All location and user information is secure and used exclusively for finding
+                    accuracy. HashTag does not sell any user data.</p>
             </div>
-            <br>
+
             <hr class="hr-line">
-            <div class="ques-row">
-                <span class="ques-txt">
-                    How strong is the adhesive?
-                </span>
-                <img class="imgb20" src="./images/img20.png">
+
+            <button class="accordion">
+                <div class="ques-row">
+                    <span class="ques-txt">
+                        How does this compare to a GPS device?
+                    </span>
+                </div>
+            </button>
+            <div class="panel">
+                <p>Bluetooth and GPS trackers differ in many ways. In general, GPS trackers maintain a constant
+                    connection via satellite and provide real-time tracking. Bluetooth trackers work within a shorter
+                    range and are dependent on a connection to a Bluetooth enabled device. Bluetooth trackers typically
+                    cost less, are lighter, and use less power.<br>
+                    Our tiny HashTag is designed to fit on a variety of assets, including a TV remote!</p>
             </div>
-            <br>
+            <!-- <img class="imgb20" src="./images/img20.png"> -->
+
             <hr class="hr-line">
-            <div class="ques-row">
-                <span class="ques-txt">
-                    What if I want to remove the Sticker and attach it to a different item?
-                </span>
-                <img class="imgb20" src="./images/img20.png">
+
+            <button class="accordion">
+                <div class="ques-row">
+                    <span class="ques-txt">
+                        How can I attach a HashTag to my items?
+                    </span>
+                    <!-- <img class="imgb20" src="./images/img20.png"> -->
+                </div>
+            </button>
+            <div class="panel">
+                <p>There are three different ways to attach your HashTag to an asset.<br>
+                    1. Stick HashTag to your items like a laptop, camera, chargers, etc. using Hash Stickers.<br>
+                    2. Slide HashTag into your backpack, purse, or luggage pockets. <br>
+                    3. Tag HashTag to your items/pets/kids using the HashTag case. </p>
             </div>
-            <br>
+
             <hr class="hr-line">
-            <div class="ques-row">
-                <span class="ques-txt">
-                    What’s HashTag’s Bluetooth finding range?
-                </span>
-                <img class="imgb20" src="./images/img20.png">
+
+            <button class="accordion">
+                <div class="ques-row">
+                    <span class="ques-txt">
+                        How strong is the adhesive on Hash Stickers?
+                    </span>
+                    <!-- <img class="imgb20" src="./images/img20.png"> -->
+                </div>
+            </button>
+            <div class="panel">
+                <p>Once applied, the adhesive bond will completely cure after 24 hours for maximum staying power! It
+                    uses a non-toxic adhesive and is meant for a one-time application. Please be aware that removing and
+                    reapplying Hash Stickers will decrease the efficacy of the adhesive.</p>
             </div>
-            <br>
+
             <hr class="hr-line">
-            <div class="ques-row">
-                <span class="ques-txt">
-                    How does this compare to a GPS device?
-                </span>
-                <img class="imgb20" src="./images/img20.png">
+
+            <button class="accordion">
+                <div class="ques-row">
+                    <span class="ques-txt">
+                        What if I want to remove the Hash Sticker and attach it to a different item?
+                    </span>
+                    <!-- <img class="imgb20" src="./images/img20.png"> -->
+                </div>
+            </button>
+            <div class="panel">
+                <p>If you are not able to pull your HashTag off an item by hand, we recommend applying adhesive remover
+                    or heating it with a blowdryer to remove it. This should loosen the adhesive’s bond so that you can
+                    use something sturdy (e.g., a credit card or guitar pick) to slide underneath and pry it off. Once a
+                    Hash Sticker is removed from an object, you will need a new Hash Sticker to reattach it to something
+                    new.</p>
             </div>
-            <br>
+
             <hr class="hr-line">
-            <div class="ques-row">
-                <span class="ques-txt">
-                    Do I need to pay to use Hash’s finding features?
-                </span>
-                <img class="imgb20" src="./images/img20.png">
+
+            <button class="accordion">
+                <div class="ques-row">
+                    <span class="ques-txt">
+                        Do I need to pay to use Hash’s finding features?
+                    </span>
+                    <!-- <img class="imgb20" src="./images/img20.png"> -->
+                </div>
+            </button>
+            <div class="panel">
+                <p>No, the app is free to use for our core finding features like ring HashTag, find my phone, see its
+                    location on a map, share with a friend, and community find.<br><br>
+
+                    Premium unlocks more features like Hash Alerts, 30 Day Location History, Unlimited Sharing, and Free
+                    Battery Replacements.</p>
             </div>
-            <br>
+
             <hr class="hr-line">
-            <div class="ques-row">
-                <span class="ques-txt">
-                    What phones and tablets are compatible with Hash?
-                </span>
-                <img class="imgb20" src="./images/img20.png">
+
+            <button class="accordion">
+                <div class="ques-row">
+                    <span class="ques-txt">
+                        What phones and tablets are compatible with HashTag?
+                    </span>
+                    <!-- <img class="imgb20" src="./images/img20.png"> -->
+                </div>
+            </button>
+            <div class="panel">
+                <p>HashTag works with most iOS and Android devices.</p>
             </div>
-            <br>
+
             <hr class="hr-line">
         </div>
     </center>
@@ -253,7 +322,18 @@
             </span>
         </div> -->
 
+        <center>
+            <div class="h13-linef">Launching in August 2022</div>
+            <br>
+            <span class="h13-linef2">Book your HashTag now to grab it first!</span>
+            <a href="./buyOne.html">
+                <button class="btn3">Pre-Order</button>
+            </a>
+        </center>
+        <br>
 
+
+        <!--         
         <div class="foot">
 
             <div class="f-col1">
@@ -309,10 +389,14 @@
                     </span>
                 </div>
             </div>
+        </div> -->
 
-        </div>
         <br>
         <center>
+            <div class="ft-col2">
+                <span class="ft-line2">CONTACT US AT: contact@hashtag.org.in</span>
+                <!-- <img class="imgb18" src="./images/img18.png"> -->
+            </div>
             <span class="f-line-l">
                 Copyright © 2022 HashTag Electronics Pvt. Ltd. All rights reserved.
             </span>
@@ -503,7 +587,22 @@
 
 
 
+    <script>
+        var acc = document.getElementsByClassName("accordion");
+        var i;
 
+        for (i = 0; i < acc.length; i++) {
+            acc[i].addEventListener("click", function () {
+                this.classList.toggle("active");
+                var panel = this.nextElementSibling;
+                if (panel.style.maxHeight) {
+                    panel.style.maxHeight = null;
+                } else {
+                    panel.style.maxHeight = panel.scrollHeight + "px";
+                }
+            });
+        }
+    </script>
 
 
 
