--- a/buyOne.html
+++ b/buyOne.html
@@ -57,8 +57,8 @@
                 <br>
                 <br>
                 <span class="b1-l12">
-                    Book your HashTag for FREE!
-                </span>
+                    Pre-Order your HashTag for ₹100
+                </span><br>
                 <span id="price" class="b1d-l5">
                     ₹999.00
                 </span>
@@ -338,7 +338,7 @@
 
 
         <center>
-            <div class="h13-linef">Launching in August 2022</div>
+            <div class="h13-linef">Launching by August 2022</div>
             <br>
             <span class="h13-linef2">Book your HashTag now to grab it first!</span>
             <a href="./buyOne.html">
@@ -410,13 +410,14 @@
         <br>
         <center>
             <div class="ft-col2">
-                <span class="ft-line2">CONTACT US AT: contact@hashtag.org.in</span>
+                <span class="ft-line2new">CONTACT US AT: contact@hashtag.org.in</span>
                 <!-- <img class="imgb18" src="./images/img18.png"> -->
             </div>
             <span class="f-line-l">
                 Copyright © 2022 HashTag Electronics Pvt. Ltd. All rights reserved.
             </span>
         </center>
+        <br>
     </div>
 
 
