--- a/buyTwo.html
+++ b/buyTwo.html
@@ -33,11 +33,11 @@
     <div class="buy1">
         <div class="b1-col1">
             <div class="b1-col1-i">
-                <img class="imgb1" id="prodt" src="./images/img27.png">
+                <img class="imgb1two" id="prodt" src="./images/img27.png">
             </div>
             <br>
             <br>
-            <img class="img21" src="./images/img30.png">
+            <img class="img21one" src="./images/img30.png">
 
 
         </div>
@@ -55,6 +55,10 @@
                     (Place + Tag + Sticker)
                 </span>
                 <br>
+                <br>
+                <span class="b1-l12">
+                    Pre-Order your HashTag for ₹100
+                </span>
                 <br>
                 <span id="price" class="b1-l5">
                     ₹1798.00
@@ -321,7 +325,7 @@
         </div> -->
 
         <center>
-            <div class="h13-linef">Launching in August 2022</div>
+            <div class="h13-linef">Launching by August 2022</div>
             <br>
             <span class="h13-linef2">Book your HashTag now to grab it first!</span>
             <a href="./buyOne.html">
@@ -392,7 +396,7 @@
         <br>
         <center>
             <div class="ft-col2">
-                <span class="ft-line2">CONTACT US AT: contact@hashtag.org.in</span>
+                <span class="ft-line2new">CONTACT US AT: contact@hashtag.org.in</span>
                 <!-- <img class="imgb18" src="./images/img18.png"> -->
             </div>
             <span class="f-line-l">
