--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
     <div class="home2">
         <div class="col1-hm2">
             <img class="img2" src="./images/img2.png">
+            <div class="h-base">
+                <br>
+            </div>
         </div>
         <div class="col2-hm2">
             <div class="right-hm2">
@@ -100,7 +103,20 @@
                 </div>
             </div>
             <br>
-            <span class="line10"> Place it | Tag it | Stick it </span>
+            <span class="line10">
+                Slide it
+                <!-- <span class="vline"> -->
+                |
+                <!-- </span> -->
+                Tag it
+                <!-- <span class="vline"> -->
+
+                |
+                <!-- </span> -->
+
+                Stick it
+
+            </span>
             <div class="home3-col2">
                 <div class="col3">
                     <img class="img4" src="./images/img6.png">
@@ -387,7 +403,7 @@
                     <hr class="acc-hr">
                     <br>
 
-                    <div class="acc-des">
+                    <!-- <div class="acc-des">
                         <div class="acc-des1">
                             Splash, Water & Dust Resistance
                         </div>
@@ -398,7 +414,7 @@
 
                     <br>
                     <hr class="acc-hr">
-                    <br>
+                    <br> -->
 
                     <div class="acc-des">
                         <div class="acc-des1">
@@ -501,7 +517,7 @@
 
 
         <center>
-            <div class="h13-linef">Launching in August 2022</div>
+            <div class="h13-linef">Launching by August 2022</div>
             <br>
             <span class="h13-linef2">Book your HashTag now to grab it first!</span>
             <a href="./buyOne.html">
