--- a/buyFour.html
+++ b/buyFour.html
@@ -33,11 +33,11 @@
     <div class="buy1">
         <div class="b1-col1">
             <div class="b1-col1-i">
-                <img class="imgb1" id="prodt" src="./images/img28.png">
+                <img class="imgb1four" id="prodt" src="./images/img28.png">
             </div>
             <br>
             <br>
-            <img class="img21" src="./images/img31.png">
+            <img class="img21one" src="./images/img31.png">
 
 
         </div>
@@ -56,6 +56,9 @@
                 </span>
                 <br>
                 <br>
+                <span class="b1-l12">
+                    Pre-Order your HashTag for ₹100
+                </span><br>
                 <span id="price" class="b1-l5">
                     ₹3796.00
                 </span>
@@ -323,14 +326,14 @@
         </div> -->
 
         <center>
-            <div class="h13-linef">Launching in August 2022</div>
+            <div class="h13-linef">Launching by August 2022</div>
             <br>
             <span class="h13-linef2">Book your HashTag now to grab it first!</span>
             <a href="./buyOne.html">
                 <button class="btn3">Pre-Order</button>
             </a>
         </center>
-        <br>
+
 
 
         <!--         
@@ -391,10 +394,10 @@
             </div>
         </div> -->
 
-        <br>
+
         <center>
             <div class="ft-col2">
-                <span class="ft-line2">CONTACT US AT: contact@hashtag.org.in</span>
+                <span class="ft-line2new">CONTACT US AT: contact@hashtag.org.in</span>
                 <!-- <img class="imgb18" src="./images/img18.png"> -->
             </div>
             <span class="f-line-l">
