--- a/buyFour.html
+++ b/buyFour.html
@@ -306,7 +306,35 @@
         <div class="ft-row">
             <div class="ft-col1">
                 <span class="ft-line1">CONNECT WITH US</span>
-                <img class="imgb19" src="./images/img19.png">
+                <!-- <img class="imgb19" src="./images/img19.png"> -->
+                <span class="imgbb20">
+                    <span>
+                        <a href="https://www.facebook.com/hashtag.org.in" style="text-decoration: none;"
+                            target="_blank"> <img class="sl" src="./images/fb.png">
+                        </a>
+                    </span>
+                    <span>
+
+                        <img class="sl" src="./images/yt.png">
+                    </span>
+                    <span>
+                        <a href="https://www.instagram.com/hashtag.org.in/" target="_blank"
+                            style="text-decoration: none;">
+                            <img class="sl" src="./images/ig.png">
+                        </a>
+                    </span>
+                    <span>
+                        <a href="https://twitter.com/hashtag_org_in" target="_blank" style="text-decoration: none;">
+                            <img class="sl" src="./images/li.png">
+                        </a>
+
+                    </span>
+                    <span>
+                        <a href="https://twitter.com/hashtag_org_in" target="_blank" style="text-decoration: none;">
+                            <img class="sl" src="./images/tw.png">
+                        </a>
+                    </span>
+                </span>
             </div>
             <div class="ft-col2">
                 <span class="ft-line2">HASHTAG APP WILL BE AVAILABLE ON</span>
@@ -610,40 +638,6 @@
 
 
 
-
-
-
-
-
-    <!-- <script>
-        function myFunction1() {
-            document.getElementById("prodt").src = "./images/img26.png";
-            document.getElementById("price").innerHTML = "₹999.00";
-            document.getElementById("priceStrike").innerHTML = " ";
-            document.getElementById("prd-count").innerHTML = "Includes 2 Free Hash Stickers";
-            document.getElementById("thumb1").style.backgroundColor = "#EEEEEE";
-            document.getElementById("thumb2").style.backgroundColor = "#FFFFFF";
-            document.getElementById("thumb3").style.backgroundColor = "#FFFFFF"
-        }
-        function myFunction2() {
-            document.getElementById("prodt").src = "./images/img27.png";
-            document.getElementById("price").innerHTML = "₹1799.00";
-            document.getElementById("priceStrike").innerHTML = "(₹1999.00)";
-            document.getElementById("prd-count").innerHTML = "Includes 4 Free Hash Stickers";
-            document.getElementById("thumb2").style.backgroundColor = "#EEEEEE";
-            document.getElementById("thumb1").style.backgroundColor = "#FFFFFF";
-            document.getElementById("thumb3").style.backgroundColor = "#FFFFFF"
-        }
-        function myFunction3() {
-            document.getElementById("prodt").src = "./images/img28.png";
-            document.getElementById("price").innerHTML = "₹3799.00";
-            document.getElementById("priceStrike").innerHTML = "(₹3999.00)";
-            document.getElementById("prd-count").innerHTML = "Includes 8 Free Hash Stickers";
-            document.getElementById("thumb3").style.backgroundColor = "#EEEEEE";
-            document.getElementById("thumb1").style.backgroundColor = "#FFFFFF";
-            document.getElementById("thumb2").style.backgroundColor = "#FFFFFF";
-        }
-    </script> -->
 
 </body>
 
