--- a/buyOne.html
+++ b/buyOne.html
@@ -313,26 +313,40 @@
         <div class="ft-row">
             <div class="ft-col1">
                 <span class="ft-line1">CONNECT WITH US</span>
-                <img class="imgb19" src="./images/img19.png">
+                <!-- <img class="imgb19" src="./images/img19.png"> -->
+                <span class="imgbb20">
+                    <span>
+                        <a href="https://www.facebook.com/hashtag.org.in" target="_blank"> <img class="sl"
+                                src="./images/fb.png">
+                        </a>
+                    </span>
+                    <span>
+
+                        <img class="sl" src="./images/yt.png">
+                    </span>
+                    <span>
+                        <a href="https://www.instagram.com/hashtag.org.in/" target="_blank">
+                            <img class="sl" src="./images/ig.png">
+                        </a>
+                    </span>
+                    <span>
+                        <a href="https://twitter.com/hashtag_org_in" target="_blank">
+                            <img class="sl" src="./images/li.png">
+                        </a>
+
+                    </span>
+                    <span>
+                        <a href="https://twitter.com/hashtag_org_in" target="_blank">
+                            <img class="sl" src="./images/tw.png">
+                        </a>
+                    </span>
+                </span>
             </div>
             <div class="ft-col2">
                 <span class="ft-line2">HASHTAG APP WILL BE AVAILABLE ON</span>
                 <img class="imgb18" src="./images/img18.png">
             </div>
         </div>
-
-        <!-- <div class="f-top-1">
-            <span class="f-top2">
-                <span class="h13-line1">CONNECT WITH US</span>
-                <img class="img19" src="./images/img19.png">
-            </span>
-            <span class="f-top3">
-                <span class="h13-line1">CONNECT WITH US</span>
-                <img class="img19" src="./images/img19.png">
-            </span>
-        </div> -->
-
-
 
 
 
@@ -347,66 +361,6 @@
         </center>
         <br>
 
-
-        <!-- 
-
-        <div class="foot">
-
-            <div class="f-col1">
-                <div class="f-col-txt">
-                    <span class="f-head">Company
-                    </span>
-                    <br>
-                    <br>
-                    <span class="f-menu">
-                        About<br>
-                        Career<br>
-                        Blogs<br>
-                        Press<br>
-                        Corporate Sales<br>
-                        Retailers<br>
-
-                    </span>
-                </div>
-            </div>
-
-            <div class="f-col2">
-                <center>
-                    <div class="f-col2-txt">
-                        <span class="f-head">Support
-                        </span>
-                        <br>
-                        <br>
-                        <span class="f-menu">
-                            Help Center<br>
-                            Order Status<br>
-                            Shipping<br>
-                            Warrenty and Refund Policy<br>
-
-
-                        </span>
-                    </div>
-                </center>
-            </div>
-
-            <div class="f-col3">
-                <div class="f-col3-txt">
-                    <span class="f-head">Legal
-                    </span>
-                    <br>
-                    <br>
-                    <span class="f-menu">
-                        Terms and Services<br>
-                        Privacy Policy<br>
-                        Resller Policy<br>
-                        Cookies Settings<br>
-
-
-                    </span>
-                </div>
-            </div>
-
-        </div> -->
         <br>
         <center>
             <div class="ft-col2">
